traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
image:
  tag: "v3.6.13"
spec:
  entryPoints:
    - traefik
  routes:
    - match: Host(traefik.local)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
